prac5/Task4/less
translate.cpp: In function ‘std::string translate(int)’:
translate.cpp:46:34: error: ‘itoa’ was not declared in this scope
     char *intStr = itoa(number/61);
                                  ^
